[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seq2cause"
version = "0.1.4"

readme = "README.md"

description = "Sample- And Population-Level Causal Discovery from Event Sequences using Autoregressive Models"
requires-python = ">=3.8,<4"

authors = [
    { name = "Hugo Math", email = "hugo.math@gmail.com" },
]

keywords = ["causal-discovery", "transformers", "sequences", "autoregressive models", "event-sequences", "interpretability"]

license = { text = "MIT" }

dependencies = [
    "transformers>=4.24.0",
    "pyarrow<17",
    "numpy<2.0",
    "torch",
    "accelerate",
    "datasets>2.20.0",
    "seaborn",
    "captum",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "pytest-cov"  # For coverage reports
]

[project.urls]
"Homepage" = "https://github.com/Mathugo/seq2cause"

[tool.hatch.build.targets.wheel]
packages = ["src/seq2cause"]
